Legend should be fixed on mobile and desktop

--- a/fireflight/src/styles/_map-legend.scss
+++ b/fireflight/src/styles/_map-legend.scss
@@ -1,13 +1,13 @@
 .legend-container {
-    width: 250px;
-    height: auto;
-    position: absolute;
-    right: 0;
-    margin: 75px 25px;
     background: rgba(0, 0, 0, 0.65);
     border-radius: 5px;
-    z-index: 10;
     color: white;
+    font-family: $header;
+    position: absolute;
+    top: 70px;
+    left: 50px;
+    z-index: 10;
+    width: 200px;
 
     .legend-item {
         width: 75%;
@@ -16,7 +16,7 @@
         justify-content: space-between;
 
         .legend-text {
-            margin: 15px;
+            margin: 10px;
         }
     }
 
